--- a/src/playbooks/bootstrap.yml
+++ b/src/playbooks/bootstrap.yml
@@ -7,12 +7,14 @@
   gather_facts: True
   tasks:
     - name: dump info for troubleshooting purposes
+      become: true
       setup:
       register: host_data_out
 
     # - debug: msg={{ host_data_out }}
 
     - name: check docker-engine is already installed
+      become: true
       stat: path=/etc/default/docker
       register: docker_conf_exists
 
@@ -30,6 +32,7 @@
   gather_facts: False
   tasks:
     - name: Upgrade system packages
+      become: true
       apt:
         upgrade: dist
         install_recommends: no
@@ -54,6 +57,48 @@
 #        - vim
 
     # https://docs.docker.com/engine/installation/linux/ubuntulinux/
+
+    # ---------------------------------------------------------------
+    # optional configs: Create a Docker group
+
+    - name: Make sure docker group is created
+      become: true
+      group:
+        name:  docker
+        state: present
+
+    - name: Make sure current user is in docker group (if is not the root user)
+      become: true
+      user:
+        name:  "{{ ansible_user_id }}"
+        groups: docker
+        append: yes
+      when:
+        "'{{ ansible_user_id }}' != 'root'"
+
+    # ---------------------------------------------------------------
+    # optional configs: Adjust memory and swap accounting
+
+    - name: Set memory limit in GRUB
+      become: true
+      lineinfile: >
+        dest=/etc/default/grub
+        regexp=^GRUB_CMDLINE_LINUX_DEFAULT
+        line='GRUB_CMDLINE_LINUX_DEFAULT="cgroup_enable=memory swapaccount=1"'
+
+    - name: Load new GRUB config
+      become: true
+      command: update-grub
+
+    # ---------------------------------------------------------------
+    # optional configs: Enable UFW forwarding
+
+    - name: enable DEFAULT_FORWARD_POLICY
+      lineinfile:
+        dest: "/etc/default/ufw"
+        backup: yes
+        regexp: '^(.*)DEFAULT_FORWARD_POLICY(.*)$'
+        line:   'DEFAULT_FORWARD_POLICY="ACCEPT"'
 
     - name: Reset UFW firewall
       become: true
@@ -98,24 +143,15 @@
     - name: Turn on UFW
       become: true
       ufw: >
-        state=enabled
+        state=reloade
 
-    - name: Set memory limit in GRUB
-      become: true
-      lineinfile: >
-        dest=/etc/default/grub
-        regexp=^GRUB_CMDLINE_LINUX_DEFAULT
-        line='GRUB_CMDLINE_LINUX_DEFAULT="cgroup_enable=memory swapaccount=1"'
+    # ---------------------------------------------------------------
+    #
+    # - name: Set hostname
+    #   become: true
+    #   hostname: name={{ inventory_hostname }}
 
-    - name: Load new GRUB config
-      become: true
-      command: update-grub
-
-    - name: Set hostname
-      become: true
-      hostname: name={{ inventory_hostname }}
-
-    - name: Set properly in /etc/hosts
-      become: true
-      lineinfile: dest=/etc/hosts regexp='^127\.0\.0\.1' line='127.0.0.1 {{ inventory_hostname }}' owner=root group=root mode=0644
+    # - name: Set properly in /etc/hosts
+    #   become: true
+    #   lineinfile: dest=/etc/hosts regexp='^127\.0\.0\.1' line='127.0.0.1 {{ inventory_hostname }}' owner=root group=root mode=0644
 
