--- a/src.ubuntu/src/playbooks/docker-drivers/volume.local-persist.yml
+++ b/src.ubuntu/src/playbooks/docker-drivers/volume.local-persist.yml
@@ -6,6 +6,8 @@ docker:
     image: cwspear/docker-local-persist-volume-plugin
     state: started
     restart_policy: unless-stopped
+    privileged: yes
+    name: volume-plugin--local-persist
     volumes:
       - /run/docker/plugins/:/run/docker/plugins/
       - /var/local/docker-volume--local-persist/:/opt/mnt/
