--- a/src.ubuntu/src/conf/ansible.cfg
+++ b/src.ubuntu/src/conf/ansible.cfg
@@ -5,7 +5,8 @@ host_key_checking = False
 transport = paramiko
 
 # additional paths to search for roles in, colon separated
-#roles_path    = /etc/ansible/roles
+#roles_path   = /etc/ansible/roles
+roles_path    = /tmp/postcfg/roles:/tmp/postcfg/roles.dh-utils
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
@@ -25,4 +26,3 @@ log_path = /var/log/ansible/ansible.log
 # want, for example, a notification or logging callback to also apply to
 # /bin/ansible runs
 #bin_ansible_callbacks = False
-
