--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 ---
+language: python
+python:
+    - 2.7
+
 services:
   - docker
 
+before_install:
+  - sudo pip2 install --upgrade pip setuptools wheel
+  - sudo pip2 install docker-compose
+
 install:
   - make build
-
-#install: true
-#script: "make build"
-
