--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,15 @@ language: python
 python:
     - 2.7
 
-sudo: required
-
-services:
-  - docker
+#sudo: required
+#
+#services:
+#  - docker
 
 before_install:
-  - sudo pip2 install --upgrade pip setuptools wheel
-  - sudo pip2 install docker-compose
+  - sudo pip2 install --upgrade pip setuptools wheel docker-compose
   - docker         --version
   - docker-compose --version
-  - make build
 
 scripts:
+  - make build
