--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ python:
 #services:
 #  - docker
 
-before_install:
+install:
   - pip2 install --upgrade pip setuptools wheel docker-compose
   - docker-compose --version
 
-scripts:
+script:
   - make build
