--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 python:
     - 2.7
 
-#sudo: required
-#
-#services:
-#  - docker
+sudo: required
+
+services:
+ - docker
 
 install:
   - pip2 install --upgrade pip setuptools wheel docker-compose
