--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,15 @@ sudo: required
 services:
  - docker
 
+docker:
+  engine-version: 1.11.2
+  compose-version: 1.7.1
+
 install:
-  - pip2 install --upgrade pip setuptools wheel docker-compose
-  - docker-compose --version
+  - sudo pip2 install --upgrade pip setuptools wheel docker-compose
+  - sudo docker-compose --version
 
 script:
-  - make build
+  - sudo make build
+
+
