--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
         DEBIAN_FRONTEND="noninteractive"
 
 install:
-  - echo "Dpkg::Options { "--force-confdef"; "--force-confold"; } " sudo tee -a /etc/apt/apt.conf.d/local
+  - echo "Dpkg::Options { \"--force-confdef\"; \"--force-confold\"; }" |sudo tee -a /etc/apt/apt.conf.d/local
   - sudo apt-get install apt-transport-https ca-certificates
   - curl -sSL https://get.docker.com/ | sudo sh
   - sudo pip2 install --upgrade pip setuptools wheel docker-compose
