--- a/src.ubuntu/docker-compose.yml
+++ b/src.ubuntu/docker-compose.yml
@@ -1,7 +1,8 @@
 ---
 version: '2'
+
 services:
-  postcfg-docker-host:
+  postcfg-dh-drv--vol:
     build: .
 
     image: highskillz/docker-postcfg-dm-host
@@ -17,6 +18,17 @@ services:
     volumes:
       - /root/.ssh:/hostssh
       - postcfg_logs:/var/log/ansible
+
+  postcfg-dh--sslh:
+    image: amondit/sslh
+    # environment:
+    #     SSH_PORT:      60022
+    # #    SSH_PORT:         22
+    # #    HTTPS_PORT:     8443
+    # #    OPENVPN_PORT:   1194
+    network_mode: "host"
+    ports:
+      - "443:443"
 
 volumes:
   # we want to persist the logs
